--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 04:05:07 2018</p>
+         Last Run: Thu Nov 29 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -42,11 +42,11 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
-                        <td>74</td>
+                        <td>32</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -54,10 +54,10 @@
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>76</td>
                         <td>0</td>
                         <td>11</td>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "22",
-                 "24",
-                 "24"
+                 "32",
+                 "33"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "74",
+                 "75",
                  "76"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 04:05:07 2018</p>
+         Last Run: Thu Nov 29 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>24</td>
+                        <td>38</td>
                         <td>83</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>96</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Snow Showers</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>38</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
                         <td>94</td>
                      </tr>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>35</td>
-                        <td>79</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>95</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>22</td>
+                        <td>23</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-9",
+                 "-7",
                  "-7"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-4",
                  "-4"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "35",
-                 "22"
+                 "38",
+                 "38",
+                 "23"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "79",
+                 "80",
                  "76"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "96",
                  "94",
-                 "95",
-                 "97"
+                 "95"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 04:05:07 2018</p>
+         Last Run: Thu Nov 29 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>82</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>22</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
-                        <td>6</td>
                         <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>40</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>7</td>
+                        <td>85</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
+                 "7",
                  "6"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "84",
-                 "85"
+                 "85",
+                 "88"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "16",
-                 "12"
+                 "40",
+                 "31",
+                 "24"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 04:05:07 2018</p>
+         Last Run: Thu Nov 29 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>65</td>
+                        <td>4</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>19</td>
+                        <td>WSW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>66</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>22</td>
+                        <td>WSW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>4</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
                  "66",
-                 "68"
+                 "65",
+                 "67"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "22",
-                 "23"
+                 "18",
+                 "21",
+                 "22"
                ]
              }
            ]
