--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 10:05:03 2018</p>
+         Last Run: Thu Nov 29 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,31 +33,31 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>15</td>
+                        <td>14</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>16</td>
                         <td>74</td>
                         <td>0</td>
                         <td>11</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "15",
-                 "24"
+                 "32",
+                 "14",
+                 "16"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
+                 "98",
+                 "98",
                  "97"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 10:05:03 2018</p>
+         Last Run: Thu Nov 29 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,37 +247,37 @@
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>38</td>
+                        <td>-10</td>
+                        <td>44</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>96</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>36</td>
-                        <td>79</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>41</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>95</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>21</td>
+                        <td>24</td>
                         <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>95</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
-                 "-9",
+                 "-10",
+                 "-8",
                  "-8"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-4",
                  "-4"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "38",
-                 "36",
-                 "21"
+                 "44",
+                 "41",
+                 "24"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "79",
+                 "78",
                  "75"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "95",
-                 "95"
+                 "98",
+                 "98",
+                 "98"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 10:05:03 2018</p>
+         Last Run: Thu Nov 29 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,19 +468,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>Partly Cloudy</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>7</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-16",
+                 "-14",
                  "-16"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-11",
+                 "-10",
                  "-11"
                ]
              }
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "84",
-                 "84",
-                 "87"
+                 "83",
+                 "85"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "27",
-                 "21"
+                 "33",
+                 "31",
+                 "29"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 10:05:03 2018</p>
+         Last Run: Thu Nov 29 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,8 +678,8 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>67</td>
+                        <td>5</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -691,19 +691,19 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>66</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>25</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>68</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -736,7 +736,7 @@
                "data":[
                  "-14",
                  "-14",
-                 "-14"
+                 "-16"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-10"
+                 "-11"
                ]
              }
            ]
@@ -805,7 +805,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "5",
                  "5"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "66",
-                 "68"
+                 "70",
+                 "69",
+                 "71"
                ]
              },
              {
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "21",
-                 "25",
+                 "24",
                  "26"
                ]
              }
