--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 11:05:02 2018</p>
+         Last Run: Thu Nov 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>32</td>
-                        <td>76</td>
+                        <td>34</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -45,10 +45,10 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>14</td>
-                        <td>73</td>
+                        <td>18</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>N</td>
                         <td>98</td>
                      </tr>
@@ -57,7 +57,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>16</td>
+                        <td>20</td>
                         <td>74</td>
                         <td>0</td>
                         <td>11</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "14",
-                 "16"
+                 "34",
+                 "18",
+                 "20"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "73",
+                 "77",
+                 "75",
                  "74"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 11:05:02 2018</p>
+         Last Run: Thu Nov 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>44</td>
-                        <td>82</td>
+                        <td>43</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -260,7 +260,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>41</td>
+                        <td>39</td>
                         <td>78</td>
                         <td>0</td>
                         <td>11</td>
@@ -272,8 +272,8 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>24</td>
-                        <td>75</td>
+                        <td>23</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "41",
-                 "24"
+                 "43",
+                 "39",
+                 "23"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "78",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 11:05:02 2018</p>
+         Last Run: Thu Nov 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,23 +464,23 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>84</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>33</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>7</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
                         <td>31</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>6</td>
+                        <td>83</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "7",
+                 "6",
                  "6"
                ]
              },
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
+                 "82",
                  "83",
                  "85"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
                  "31",
-                 "29"
+                 "28",
+                 "27"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 11:05:02 2018</p>
+         Last Run: Thu Nov 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>21</td>
+                        <td>W</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>24</td>
+                        <td>W</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,10 +703,10 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>26</td>
                      </tr>
                   </tbody>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "69",
-                 "71"
+                 "72",
+                 "71",
+                 "73"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "24",
+                 "22",
+                 "25",
                  "26"
                ]
              }
